--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <div id="root"></div>
     <div id="login"></div>
     <div id="signup"></div>
+    <div id="createProject"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
